# redvox-python-sdk

./: .coafile  .gitignore  .mypy.ini  .pylintrc  LICENSE  README.md  api900.proto  api900_pb2.py  bitbucket-pipelines.yml  lint.sh  pyproject.toml  reader_tests.py  requirements.txt  requirements_dev.txt  run_mypy.sh  run_pylint.sh  run_tests.sh  scrap.py  setup.py
.github/workflows/: codeql-analysis.yml  testing.yml
api900/: reader.py
docs/: changelog.md  example.py  reader.api.html  redvox-api900-docs.md
docs/api_docs/redvox/: index.html  settings.html
docs/python_sdk/: README.md  installation.md  low_level_api.md  toc.py  toc.sh
docs/python_sdk/cli/: README.md
docs/python_sdk/cloud/: README.md
docs/python_sdk/data_window/: README.md  (+4 more)
docs/v1.3.1/: example.py  reader.api.html  redvox-api900-docs.md
docs/v1.3.2/: 0000001314_1539627249223.rdvxz  example.py  reader.api.html  redvox-api900-docs.md
docs/v1.4.0/: reader.api.html  redvox-api900-docs.md
docs/v1.4.1/: reader.api.html
docs/v1.5.0/: example.json  example.py  example_packet_creation.py  reader.api.html  redvox-api900-docs.md
docs/v2.0.0/: redvox-api900-docs.md
docs/v2.1.1/: redvox-api900-docs.md
docs/v2.2.0/: redvox-api900-docs.md
docs/v2.3.0/: redvox-api900-docs.md
docs/v2.5.0/: redvox-api900-docs.md
docs/v2.6.0/: cli-docs.md  redvox-api900-docs.md
docs/v2.7.1/: cli-docs.md  redvox-api900-docs.md
docs/v2.9.10/: redvox-api900-docs.md
docs/v2.9.2/: redvox-api900-docs.md
docs/v3.0.0.dev14/: README.md
docs/v3.0.0a1/: README.md
docs/v3.0.0a14/: README.md
docs/v3.0.0a15/: README.md
docs/v3.0.0a3/: README.md
redvox/: __init__.py  settings.py
redvox/api1000/: common.py  conversions.py  device_information.py  errors.py  io.py  io_lib.py  io_primitives.py  io_raw.py  location_channel.py  microphone_channel.py  packet_information.py  scrap.py  sensor_channels.py  single_channel.py  summary_statistics.py  timing_information.py  user_information.py  wrapped_packet.py  xyz_channel.py
redvox/api900/: cli.py  concat.py  constants.py  data_req.py  date_time_utils.py  deprecation.py  exceptions.py  location_analyzer.py  migrations.py  reader.py  reader_utils.py  stat_utils.py  summarize.py  types.py  wrapped_redvox_packet.py
redvox/cli/: cli.py  conversions.py  data_req.py
redvox/cloud/: api.py  api_m_fqns.py  auth_api.py  client.py  config.py  data_api.py  data_client.py  data_io.py  errors.py  metadata.py  metadata_api.py  query_timing_correction.py  routes.py  session_model_api.py  station_stats.py  subscription.py
redvox/common/: __init__.py  api_conversions.py  api_reader.py  api_reader_dw.py  api_reader_old.py  api_reader_raw.py  constants.py  cross_stats.py  data_window.config.toml  data_window.py  data_window_configuration.py  data_window_configuration_old.py  data_window_configuration_wpa.py  data_window_io.py  data_window_old.py  data_window_wpa.py  date_time_utils.py  dw_query.py  errors.py  event_stream.py  event_stream_io.py  file_statistics.py  gap_and_pad_utils.py  gap_and_pad_utils_old.py  gap_and_pad_utils_wpa.py  io.py  io_beta.py  load_sensor_data.py  offset_model.py  packet_to_pyarrow.py  parallel_utils.py  reader_session_model.py  run_me.py  runtime_properties.py  sensor_data.py  sensor_data_io.py  sensor_data_old.py  sensor_data_with_pyarrow.py  sensor_io.py  sensor_reader_utils.py  (+20 more)
redvox/tests/: __init__.py  pyarrow_demo.py  recreate_bug.py  run_me.py  summary_creator.py  test_accelerometer_sensor.py  test_barometer_sensor.py  test_cli.py  test_concatenation.py  test_date_time_utils.py  test_evenly_sampled_sensor.py  test_gyroscope_sensor.py  test_infrared_sensor.py  test_issue360.py  test_light_sensor.py  test_location_sensor.py  test_magnetometer_sensor.py  test_microphone_sensor.py  test_reader.py  test_reader_utils.py  test_settings.py  test_stat_utils.py  test_time_synchronization_sensor.py  test_unevenly_sampled_sensor.py  test_wrapped_redvox_packet.py  test_xyz_unevenly_sampled_sensor.py  utils.py
scripts/: build-and-upload-dist.sh  build_protos.sh  check_user_config.py  clean-project.sh  clean.sh  docs.sh  generate-api-documentation.sh  install-locally.sh  install.sh  publish.sh  pylint.sh  run-mypy.sh  test.sh
tests/: 0000001314_1532656864354.rdvxz  mock_packets.py  reader_tests.py  test_high_level_api.py  test_reader.py  test_utils.py  test_writer.py  utils.py
tests/test_data/: no_channels.json  no_top_level_metadata.json
(+1107 files in other folders)
