# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "redvox"
authors = [
    { name = "RedVox, Inc", email = "support@redvox.io" }
]
description = "Library for working with RedVox files. "
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
    "cython==0.29.34",
    "dataclasses-json==0.5.7",
    "fastkml==0.12",
    "lxml==4.9.2",
    "psutil==5.9.5",
    "pyarrow==11.0.0",
    "requests==2.28.2",
    "websocket-client==1.5.1",
    "redvox-base[lz4,numpy,pandas,protobuf,pyserde,scipy,scikit-learn,toml]==2023.4.27"
]

[project.optional-dependencies]
gui = [
    "PySide6==6.5.0",
    "redvox-base[matplotlib]==2023.4.27"
]

native = [
    "redvox_native==0.2.3"
]

full = [
    "PySide6==6.5.0",
    "redvox-base[matplotlib]==2023.4.27",
    "redvox_native==0.2.3",
]

[project.urls]
homepage = "https://github.com/RedVoxInc/redvox-python-sdk"
PyPI = "https://pypi.org/project/redvox/"

[project.scripts]
redvox-cli = "redvox.cli.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "redvox.VERSION" }

[tool.setuptools.packages.find]
include = ["redvox*"]
exclude = ["redvox.tests*"]
