# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "redvox"
authors = [
    { name = "RedVox, Inc", email = "support@redvox.io" }
]
description = "Library for working with RedVox files. "
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
    "cython==0.29.34",
    "dataclasses-json==0.5.7",
    "fastkml==0.12",
    "lxml==4.9.3",
    "lz4==4.3.2",
    "numpy==1.23.5",
    "pandas==2.0.1",
    "protobuf==4.22.3",
    "psutil==5.9.5",
    "pyarrow==11.0.0",
    "pyserde==0.10.4",
    "requests==2.28.2",
    "scipy==1.10.1",
    "scikit-learn==1.2.2",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomli-w==1.0.0",
    "websocket-client==1.5.1",
]

[project.optional-dependencies]
gui = [
    "PySide6==6.5.0",
    "matplotlib==3.7.1"
]

native = [
    "redvox_native==0.2.3"
]

full = [
    "PySide6==6.5.0",
    "matplotlib==3.7.1",
    "redvox_native==0.2.3",
]

[project.urls]
homepage = "https://github.com/RedVoxInc/redvox-python-sdk"
PyPI = "https://pypi.org/project/redvox/"

[project.scripts]
redvox-cli = "redvox.cli.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "redvox.VERSION" }

[tool.setuptools.packages.find]
include = ["redvox*"]
exclude = ["redvox.tests*"]
