# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "redvox"
authors = [
    { name = "RedVox, Inc", email = "support@redvox.io" }
]
description = "Library for working with RedVox files. "
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
    "cython==3.0.10",
    "dataclasses-json==0.6.7",
    "fastkml==0.12",
    "lxml==5.2.2",
    "lz4==4.3.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "protobuf==4.25.3",
    "psutil==6.0.0",
    "pyarrow==16.1.0",
    "pyserde==0.19.3",
    "requests==2.32.3",
    "scipy==1.13.1",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomli-w==1.0.0",
    "websocket-client==1.8.0",
]

[project.optional-dependencies]
gui = [
    "PySide6==6.5.0",
    "matplotlib==3.9.1"
]

native = [
    "redvox_native==0.2.3"
]

full = [
    "PySide6==6.5.0",
    "matplotlib==3.9.1",
    "redvox_native==0.2.3",
]

[project.urls]
homepage = "https://github.com/RedVoxInc/redvox-python-sdk"
PyPI = "https://pypi.org/project/redvox/"

[project.scripts]
redvox-cli = "redvox.cli.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "redvox.VERSION" }

[tool.setuptools.packages.find]
include = ["redvox*"]
exclude = ["redvox.tests*"]
